static/css/style.css
/* ... */
.toast {
    font-size: 1rem;
    font-weight: bold;
    opacity: 0.95;
}

.toast-success,
.toast-info,
.toast-debug,
.toast-error,
.toast-warning {
    background-color: var(--bg-grey);
    color: var(--text-dark);
}

.toast-success>.toast-header,
.toast-info>.toast-header {
    background-color: var(--bs-success);
}

.toast-debug>.toast-header,
.toast-error>.toast-header,
.toast-warning>.toast-header {
    background-color: var(--bs-danger);
}

/* SKETCHBOOK STYLES */

.control-panel {
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
    background-color: var(--bg-panel);
}

.drawing-prompt-box {
    min-height: 4.6rem;
    background-color: var(--bg-light);
    border-radius: 5px;
    color: var(--text-dark);
    display: flex;
    align-items: center;
}

#drawing-prompt {
    text-align: center;
    line-height: 1.8rem;
    font-family: 'Baloo 2', Arial, Helvetica, sans-serif;
    font-weight: bold;
    font-size: 1.2rem;
    width: 100%;
}

/* flex grids for buttons */

.flex-wrap-holder {
    display: flex;
    flex-wrap: wrap;
}

/* drawing canvas */

#sketchbook-scaler {
    transform-origin: 0px 0px !important;
}

#sketchbook-background {
    height: 980px;
    width: 1340px;
    background-image: url("/media/svg/sketchbook-background.svg");
}

#sketchbook {
    position: absolute;
    top: 110px;
    left: 30px;
    cursor: crosshair;
    touch-action: none;
}

#paper {
    position: absolute;
    top: 110px;
    left: 30px;
    transform-origin: 0px 0px !important;
}

.plain-paper {
    display: none;
}

.watermarked-paper {
    background-image: url("/media/svg/watermark.svg");
}

/* Information on generating paper backgrounds with CSS gradients found in this thread:
 https://stackoverflow.com/questions/3540194/how-to-make-a-grid-like-graph-paper-grid-with-just-css */

.lined-paper {
    background-size: 20px 30px;
    background-image:
        linear-gradient(to bottom, rgb(147, 163, 255) 1px, transparent 2px);
}

.squared-paper {
    background-size: 20px 20px;
    background-image:
        linear-gradient(to right, rgb(176, 176, 176) 1px, transparent 1px),
        linear-gradient(to bottom, rgb(176, 176, 176) 1px, transparent 1px);
}

/* canvas cursor preview */

.cursor-holder {
    height: 50px;
    width: 50px;
    border: 5px var(--bg-grey) solid;
    border-radius: 50%;
    transform-origin: center;
}

#cursor {
    width: 20px;
    height: 20px;
    border-radius: 50%;
}

/* slider styling */

input[type=range]::-webkit-slider-thumb {
    background: var(--brand-primary-color);
}

input[type=range]::-moz-range-thumb {
    background: var(--brand-primary-color);
}

input[type=range]::-webkit-slider-runnable-track {
    background: var(--bg-grey);
}

input[type=range]::-moz-range-track {
    background: var(--bg-grey);
}

input[type=range]:focus::-webkit-slider-runnable-track {
    background: var(--bg-light);
}

input[type=range]:focus::-moz-range-track {
    background: var(--bg-light);
}

/* preset colour selection buttons */

.colour-circle {
    position: relative;
    flex-basis: calc(10% - 4px);
    margin: 2px;
    box-sizing: border-box;
}

.colour-circle::before {
    content: '';
    display: block;
    padding-top: 100%;
}

.colour-circle .colour-button {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    border: 1px solid;
    border-radius: 50%;
}

.colour-button:focus-visible {
    outline: 1px solid;
    outline-color: #fff;
    box-shadow: 0 0 0 .25rem rgba(130, 138, 145, .5);
}

.red-ink {
    background-color: var(--red-ink);
}

.orange-ink {
    background-color: var(--orange-ink);
}

.yellow-ink {
    background-color: var(--yellow-ink);
}

.green-ink {
    background-color: var(--green-ink);
}

.blue-ink {
    background-color: var(--blue-ink);
}

.purple-ink {
    background-color: var(--purple-ink);
}

.beige-ink {
    background-color: var(--beige-ink);
}

.brown-ink {
    background-color: var(--brown-ink);
}

.black-ink {
    background-color: var(--black-ink);
}

.light-grey-ink {
    background-color: var(--light-grey-ink);
}

.light-red-ink {
    background-color: var(--light-red-ink);
}

.light-orange-ink {
    background-color: var(--light-orange-ink);
}

.light-yellow-ink {
    background-color: var(--light-yellow-ink);
}

.light-green-ink {
    background-color: var(--light-green-ink);
}

.light-blue-ink {
    background-color: var(--light-blue-ink);
}

.pink-ink {
    background-color: var(--pink-ink);
}

.light-beige-ink {
    background-color: var(--light-beige-ink);
}

.light-brown-ink {
    background-color: var(--light-brown-ink);
}

.grey-ink {
    background-color: var(--grey-ink);
}

.white-ink {
    background-color: var(--white-ink);
}

/* canvas tool selection buttons */

.tool-button {
    position: relative;
    flex-basis: calc(25% - 4px);
    margin: 2px;
    box-sizing: border-box;
    border: none;
    background: none;
    cursor: pointer;
    filter: saturate(0%);
    transition: all 0.2s ease-in-out;
}

.tool-button:hover,
.tool-button:focus {
    filter: saturate(100%);
    transform: scale(1.1);
}

.active-tool {
    filter: saturate(100%);
    transform: scale(1.1);
}

.tool-icon {
    max-height: 100px;
}

/* COLORIS COLOUR PICKER STYLES */

.coloris-background {
    background-color: var(--bg-grey);
    border-radius: 2px;
    border: 2px solid var(--bg-grey);
}

.clr-field,
.coloris-background .clr-field button {
    width: 100%;
    height: 24px;
}

.coloris-background .clr-field button:focus {
    box-shadow: 0 0 0 .175rem var(--bg-light);
}

.coloris-background .clr-field button:focus-visible {
    outline: var(--bg-light) solid 1px;
}

input.coloris {
    width: 100%;
    height: 24px;
}

input.coloris:hover {
    cursor: pointer;
}

.clr-dark {
    background-color: var(--bg-dark) !important;
    border: 2px solid var(--border-grey);
    border-radius: 5px;
}
/* ... */

